fix:  Fix permanent right scrollbar

--- a/app/components/widgets/ChartWidget/style.css
+++ b/app/components/widgets/ChartWidget/style.css
@@ -9,5 +9,5 @@
 }
 
 .chartContainer {
-  height: calc(100% - 50px);
+  height: calc(100% - 60px);
 }
